# ProyectoIA1

./: .gitignore  CMakeLists.txt  README.md  feedforward.cpp  matrix.cpp  matrix.h
.github/workflows/: ci.yaml
IA1/: IA1.cbp  IA1.depend  IA1.layout  IOMatrix.h  activationfunction.cpp  activationfunction.h  feedforward.cpp  feedforward.h  iomatrix.cpp  iomatrix.h  main.cpp  matrix.cpp  matrix.h
test/: CMakeLists.txt  test.cpp
